--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,7 +1,6 @@
 {
   "imports": {
-    "std/": "https://deno.land/std@0.201.0/",
-    "~/": "./src/"
+    "std/": "https://deno.land/std@0.201.0/"
   },
   "tasks": {
     "test": "deno test -A --unstable"
